src/objects/Address__c.object
<CustomObject>
    <description>This object will contain all Addresses that are related to a Customer Order.  There are by default 3 types of Addresses:

- Customer Address
- Invoice Address
- Installation Address</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Account to which this Address is linked directly (not via Opportunity or Lead)</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Address_Information__c</fullName>
        <description>This field is used to store some free text with extra information about the Address</description>
        <label>Additional Address Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddressCheck_Err_Msg__c</fullName>
        <inlineHelpText>Shows any error information due to Address or Network check</inlineHelpText>
        <label>AddressCheck Error Message</label>
        <length>1080</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddressCheck_Result_Code__c</fullName>
        <description>If an address check is trigger via trigger, this field shows the ongoing and final result of the address check performed</description>
        <label>AddressCheck Result</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Roles__c</fullName>
        <description>For universal address record types only. updated automatically from where the role is implied. I.e. from Product_Order, AddressTicket,...</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSV</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>This will indicate the type of address. Only used in old approach to addresses</description>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Admin_Coordinator_Cellular__c</fullName>
        <description>This is the Mobile Phone number of the Admin Coordinator</description>
        <label>Admin Coordinator Cellular</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Admin_Coordinator_Email__c</fullName>
        <description>This is the Email Address of the Admin Coordinator</description>
        <label>Admin Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_Coordinator_Fax__c</fullName>
        <description>This is the Fax number of the Admin Coordinator</description>
        <label>Admin Coordinator Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Admin_Coordinator_Name__c</fullName>
        <description>The name of the Admin Coordinator</description>
        <label>Admin Coordinator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Coordinator_Phone__c</fullName>
        <description>This the Phone number of the Admin Coordinator</description>
        <label>Admin Coordinator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Apartment__c</fullName>
        <description>Search field for the NINAS check.</description>
        <label>Apartment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box__c</fullName>
        <label>Box</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanonicalAddressId__c</fullName>
        <description>Unique address id returned by the RetrieveAddress webservice (NINAS). Aka Tina Party Location Id</description>
        <label>Canonical Address Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>This field will contain the name of the Company that is related to the Address</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Administration__c</fullName>
        <description>This field contains the family name of the contact person of the Company that is responsible for the administration. NOT USED ANYMORE (OOP uses the Admin_... fields)</description>
        <label>OBSOLETEContact Administration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the link to the Customer Order or Contract</description>
        <label>Customer Order</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Customer_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field contains the Country of the Address of the Company</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>This field contains the Email address of the Administrative Contact person of the Company. NOT USED ANYMORE (OOP uses the Admin_... fields)</description>
        <label>OBSOLETEEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>This field contains the Fax number of the Administrative Contact person of the Company. NOT USED ANYMORE (OOP uses the Admin_... fields)</description>
        <label>OBSOLETEFax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Field_Contact_Info__c</fullName>
        <inlineHelpText>Name and contact data of Field Contact to make appointment with for Pre Site Visit</inlineHelpText>
        <label>Field Contact Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Contact_Number__c</fullName>
        <label>Field Contact Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact person in the field to make appointment with for Pre Site Visit</inlineHelpText>
        <label>Field Contact SFDC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>part of address to be sent to Ninas</description>
        <label>Floor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <description>part of the address to be sent to Ninas</description>
        <label>House Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Customer_Reference__c</fullName>
        <description>This field will contain the Customer Reference which will be visible on the Invoice. A second Customer Reference should be part of Ticket/Opportunity, CO or PO. In OOP (and in the future for eSOF as well), the invoice Customer Reference on Address__c level will NOT be used (OBSOLETE)</description>
        <label>Invoice Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Name__c</fullName>
        <description>This will hold the name that will become visible on the Invoice. Not used anymore</description>
        <label>OBSOLETEInvoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_TVA__c</fullName>
        <description>Not used anymore</description>
        <label>OBSOLETEInvoice TVA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <description>This field indicates if the invoice will be a global or more detailed invoice</description>
        <label>Invoice Type</label>
        <picklist>
            <picklistValues>
                <fullName>Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_for_attention_of__c</fullName>
        <description>This field is used to store the Name, Business Unit, Service, .... to which the invoice is addressed.  This is the Duct &quot;t.a.v.&quot; or &quot;Ter attentie van&quot;.</description>
        <label>Invoice for attention of</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>value of IsValidated field returned by the retrieveAddresses webservice</description>
        <inlineHelpText>An indicator of whether the data quality of the address has been validated or if there is an issue with the address data.</inlineHelpText>
        <label>AddressDB Is Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>contains the IsVerified field of the retrieveAddresses webservice</description>
        <inlineHelpText>When an address first enters our system our technicians have not yet visited the site to check if it is feasible to provide services on it. Hence it is a not verified and manual address.</inlineHelpText>
        <label>AddressDB Is Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>This field is used to determine the Language that needs to be used for the Esoft</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>EN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lead to which this Address is linked for evaluation of coax connectivity feasibility</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Person__c</fullName>
        <description>This field indicates the Legal Entity of the Company</description>
        <label>Legal Person</label>
        <picklist>
            <picklistValues>
                <fullName>BVBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VZW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Locked_for_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Customer (OOP user, ...) cannot edit the address anymore</inlineHelpText>
        <label>Locked for Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Account_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this Address corresponds to the address filled at Account level. All changes to this Address will also be sync&apos;ed to the Account address fields, and they will become read-only on the account itself. Only one address can be Main!</inlineHelpText>
        <label>Main Account Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Ordering_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this Address has to be selectable as Ordering Entity in OOP (and in the future in eSOF when that will use the new Address concept.)</inlineHelpText>
        <label>Main Ordering Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>This field contains the Mobile Phone number of the Administrative Contact person of the Company. NOT USED ANYMORE (OOP uses the Admin_... fields)</description>
        <label>OBSOLETEMobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MunicipalityId__c</fullName>
        <description>Id of municipality as coming from the RetrieveAddress webservice</description>
        <label>MunicipalityId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Bill_Basic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>My Bill Basic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NINAS_CATSAPStatus__c</fullName>
        <label>CATSAP Status</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NINAS_CableCompany__c</fullName>
        <inlineHelpText>Please add cable company as it comes from the Ninas address database</inlineHelpText>
        <label>Cable Company</label>
        <picklist>
            <picklistValues>
                <fullName>Gaselwest (GLW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Havi-TV (HAV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imea (IMA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integan (ITG)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interelectra (IEA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intergem (ING)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interteve (ITV)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrax (INF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IVEKA (IVK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iverlek 1 (IL1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iverlek 2 (IL2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iverlek 3 (IL3)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBE (PBE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telekempo (TKO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tevelo (TLO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teveoost (TVO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teveoost Centrum (TVC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tevewest (TVW)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPC (UPC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VEM-Kempen (VEK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woluwe-TV (WOL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WVEM (WVM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>foute waarde (test)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NINAS_CustomerInfo__c</fullName>
        <description>First Name and Last Name of customer as last known on the Service Access Point</description>
        <inlineHelpText>Last known customer&apos;s name on this SAP</inlineHelpText>
        <label>SAP Customer Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NINAS_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id of the physical location coming from the Ninas database</inlineHelpText>
        <label>SAP Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NINAS_LastUpdate__c</fullName>
        <label>Coax Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NINAS_Node__c</fullName>
        <description>part of the address to be sent to Ninas</description>
        <label>Node</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NINAS_RefNo__c</fullName>
        <label>Coax Ref No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NINAS_Remark__c</fullName>
        <description>&apos;Remark&apos; coming back from the retrieveNetworkDetails webservice, containing free text info about the COAX end-point</description>
        <label>Remark</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NINAS_SAPId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id of the physical location coming from the Ninas database</inlineHelpText>
        <label>SAP Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItem_ID__c</fullName>
        <description>This field will contain the ID of the related OpportunityLineItem. A lookup is not possible to OpportunityLineItem but we need to store this link before we can convert the OpportunityLineItems into Product Orders with Addresses. This is only used in the old concept of addresses</description>
        <externalId>true</externalId>
        <label>OpportunityLineItem ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the link to Opportunity which is used for the O2O-B implementation where an Address is linked to an Opportunity and OpportunityLineItem before they are converted into Customer Order (Contract) and Product Orders. This is only used in the old concept of addresses</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>This field contains the Phone number of the Administrative Contact of the Company. NOT USED ANYMORE (OOP uses the Admin_... fields)</description>
        <label>OBSOLETEPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <description>This field contains the City or Place of the Address of the Company</description>
        <label>Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>This field contains the Postal Code or Zip Code of the Address of the Company</description>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is only used in the old concept of addresses</description>
        <label>Product Order</label>
        <referenceTo>Product_Order__c</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Customer_Order_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RPR__c</fullName>
        <description>This is the &quot;locatie kamer van koophandel&quot; and is used in the O2O implementation and on the E-SOF</description>
        <label>RPR</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetId__c</fullName>
        <description>Id of Street as coming from the RetrieveAddress webservice</description>
        <label>StreetId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>This field contains the Street and number of the Address of the Company</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_VAT__c</fullName>
        <label>Subject to VAT</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subnumber__c</fullName>
        <description>part of the address to be sent to Ninas</description>
        <label>Sub House number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggerAction__c</fullName>
        <inlineHelpText>updating this field will trigger the action indicated. Can be used from workflows, other triggers, manually by admins, etc.</inlineHelpText>
        <label>Action to trigger</label>
        <picklist>
            <picklistValues>
                <fullName>PSV Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSV force new Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSV Request WIFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSV Request WIFI PRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NINAS AddressCheck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NINAS NetworkDetails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NINAS AddressAndNetwork</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <description>This is the VAT number of the Customer</description>
        <label>VAT Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Way_of_payment__c</fullName>
        <description>It is used for ISDN BA-1 Combo product</description>
        <label>Way of payment</label>
        <picklist>
            <picklistValues>
                <fullName>Bank transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By direct debit and receive 1% discount on the cost per minute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bypassUserValidations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>pure technical field that is read-only for all profiles. The trigger will set this value to allow bypassing of validations that are imposed on users that directly adapt the Address record</description>
        <label>bypassUserValidations</label>
        <type>Checkbox</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Address Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>General_Address</fullName>
        <active>true</active>
        <description>This recordtype is used to create a General Address</description>
        <label>General Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_Address</fullName>
        <active>true</active>
        <description>This recordtype is used to create an Installation Address</description>
        <label>Installation Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoice_Address</fullName>
        <active>true</active>
        <description>This recordtype is used to create an Invoice Address</description>
        <label>Invoice Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Universal_Address</fullName>
        <active>true</active>
        <description>Address to be used in different roles, depending from where it is linked to</description>
        <label>Universal Address</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Not_allowed_to_change_Main_Account_Addr</fullName>
        <active>true</active>
        <description>you can not modify the Main Account Address flag</description>
        <errorConditionFormula>and (not (isnew()), ischanged(Main_Account_Address__c))</errorConditionFormula>
        <errorDisplayField>Main_Account_Address__c</errorDisplayField>
        <errorMessage>You can not modify the Main Account Address flag</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Synced_address_fields_are_readonly</fullName>
        <active>true</active>
        <description>The Address fields that are synced by trigger from Account when the flag Main_Account_Address__c is true, are read-only for any direct insert or update (ie. not via a trigger that is able to set the bypassUserValidations flag.</description>
        <errorConditionFormula>AND(
  not(bypassUserValidations__c)
 ,Main_Account_Address__c
 ,OR (
   isNew()
  ,isChanged(Street__c)
  ,isChanged(Postal_Code__c)
  ,isChanged(Place__c)
  ,isChanged(Country__c)
  )
)</errorConditionFormula>
        <errorMessage>You are not allowed to create a Main Address or update the synced address fields of a Main Address directly. Update the Account address instead.</errorMessage>
    </validationRules>
</CustomObject>